--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
+
+# For JDBC Jobstore
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.schema = classpath:quartz.sql
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+spring.datasource.url =jdbc:postgresql://localhost:5432/qrtz_schedular
+spring.datasource.jdbc-url =jdbc:postgresql://localhost:5432/qrtz_schedular
+spring.datasource.username=postgres
+spring.datasource.password=postgres
